# myTEK4030

./: README.md  intro_part_3.md  intro_part_4.md  kdevelop.md  oblig_1.md
asg_01/Besvaralse/assignment/: B_sim_matrix.slx  B_sim_matrix.slxc  C_sim_matrix.slx  C_sim_matrix.slxc  eks.m  ex11.m  g_vector.slx  g_vector.slxc  inverse_model.slx  inverse_model.slxc  matlab.mat  mpl.m  n_vector.slx  n_vector.slxc  parameters.m  simplified_model.slx  simplified_model.slxc  two_link_model.slx  two_link_model.slxc
asg_01_besvarelse/asg_01_ros/ros/: controlle.cpp  controller.cpp  hallo_world.cpp  simulator.cpp
asg_02_besvarelse/: subscriber-1.cpp
asg_03_besvarelse/: CMakeLists.txt  pd_controller.cpp
crustcrawler_lib-master/crustcrawler_lib-master/: CMakeLists.txt  README.md  package.xml
crustcrawler_lib-master/crustcrawler_lib-master/src/: dynamics_simple_6dof.cpp  kinematics.cpp  kinematics_6dof.cpp
crustcrawler_lib-master/crustcrawler_lib-master/test/: test_dynamics.cpp  test_kinematics.cpp
crustcrawler_setup-master/crustcrawler_setup-master/: PROJECT.md  README.md
planar_robot_simulator-master/planar_robot_simulator-master/: CMakeLists.txt  README.md  package.xml
rover_setup-master/: README.md
tek4030_ros_intro-master/: intro_part_1.md  intro_part_2.md  oblig_2.md
tek4030_turtlebot3-master/: CMakeLists.txt  README.md  package.xml
tek4030_turtlebot3-master/src/: sample.cpp
tek4030_visual_servoing-master/tek4030_visual_servoing/: CMakeLists.txt  package.xml
tek4030_visual_servoing-master/tek4030_visual_servoing_camera_controller/: CMakeLists.txt
(+8 files in other folders)
